@@ -1,5 +1,10 @@
 2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* doc/opimport.1.in:
+	* doc/oprofile.xml: improve documentation about opimport
+
+2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* gui/ui/oprof_start.base.ui: handle ui events help string when using
 	  keyboard to navigate through event list
 
